nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-server
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
